--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -17,6 +17,11 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
+  #       add-beans:
+  # grind-beans:
+  #   needs: add-beans
+  # brew-coffee:
+  #   needs: [add-beans, grind-beans]
       # Step 3 - Add tests and linting here
   deploy:
     needs: build
@@ -29,4 +34,12 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
+      - name: Build
+        run: npm run build
+        name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: dist
+
       # Step 2: Add deploy to Github pages here! Hot tip - The solution is in the Readme
