--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -7,6 +7,11 @@ on:
     branches: [ develop ]
 
 jobs:
+  add-beans:
+  grind-beans:
+    needs: add-beans
+  brew-coffee:
+    needs: [add-beans, grind-beans]
   build:
     runs-on: ubuntu-latest
     steps:
@@ -17,11 +22,7 @@ jobs:
           node-version: '14.x'
       - name: Install dependencies
         run: npm ci
-  #       add-beans:
-  # grind-beans:
-  #   needs: add-beans
-  # brew-coffee:
-  #   needs: [add-beans, grind-beans]
+        
       # Step 3 - Add tests and linting here
   deploy:
     needs: build
