--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -7,12 +7,25 @@ on:
     branches: [ develop ]
 
 jobs:
-  - add-beans:
-  - grind-beans:
-    needs: add-beans
-  - brew-coffee:
-    needs: [add-beans, grind-beans]
-  build:
+  find-match:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js 14.x
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14.x'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
+      - name: Run linting
+        run: npm run lint
+      - name: Run build
+        run: npm run build
+      - name: Run deploy
+        run: npm run deploy
+    build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
