--- a/.github/workflows/build-pipeline.yml
+++ b/.github/workflows/build-pipeline.yml
@@ -7,10 +7,11 @@ on:
     branches: [ develop ]
 
 jobs:
-  find-match:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Use Node.js 14.x
         uses: actions/setup-node@v2
         with:
@@ -19,12 +20,6 @@ jobs:
         run: npm ci
       - name: Run tests
         run: npm run test
-      - name: Run linting
-        run: npm run lint
-      - name: Run build
-        run: npm run build
-      - name: Run deploy
-        run: npm run deploy
 
   build:
     runs-on: ubuntu-latest
